Try OpenJDK 19